--- a/pull/pull.html
+++ b/pull/pull.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title >student post </title>
-       <link type="text/css" rel="stylesheet" href="post.css" >
+        <title >student pull </title>
+       <link type="text/css" rel="stylesheet" href="pull.css" >
     </head>
     <body>
           <h1>STUDENT CLINET </h1>
-          
+          <SPAN  class ="text"> id : </SPAN>
+                       <input  type="number"  id ="id" class="input-page" ><br>
             <SPAN  class ="text"> first name : </SPAN>
                        <input  type="text"  id ="first_name" class="input-page" ><br>
                    <SPAN  class ="text"> last name : </SPAN>
@@ -19,6 +20,6 @@
             <table id="tabal"></table>
             <div id="error" class="error"</div>
            
-        <script src="post.js"></script>
+        <script src="pull.js"></script>
     </body>
 </html>
